force-app/main/default/objects/Usuario_Portal_Empresarial__c/Usuario_Portal_Empresarial__c.object-meta.xml
<CustomObject>
    <label>Usuario Portal Empresarial</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuario Portal Empresarial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>