force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Apellidos</label>
    <length>20</length>
    <type>Text</type>
</CustomField>