force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Contrasena2__c.field-meta.xml
<CustomField>
    <fullName>Contrasena2__c</fullName>
    <label>Contraseña</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>