force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Identidad__c.field-meta.xml
<CustomField>
    <fullName>Identidad__c</fullName>
    <label>Identidad</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>