force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Nombre_completo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_completo__c</fullName>
    <formula>Name + &apos; &apos; + Apellidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo</label>
    <type>Text</type>
</CustomField>