force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Nombre_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Usuario__c</fullName>
    <externalId>true</externalId>
    <label>Nombre Usuario</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>