force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Otra_pregunta__c.field-meta.xml
<CustomField>
    <fullName>Otra_pregunta__c</fullName>
    <label>Otra pregunta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>