force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/pregunta__c.field-meta.xml
<CustomField>
    <fullName>pregunta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pregunta Seguridad</label>
    <referenceTo>Pregunta_Seguridad__c</referenceTo>
    <relationshipLabel>Usuario Portal Empresarial</relationshipLabel>
    <relationshipName>Usuario_Portal_Empresarial</relationshipName>
    <type>Lookup</type>
</CustomField>