force-app/main/default/objects/Usuario_Portal_Empresarial__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <label>Respuesta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>