force-app/main/default/objects/Usuario_Portal_Empresarial__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Apellidos__c</columns>
    <columns>Email__c</columns>
    <columns>Nombre_Usuario__c</columns>
    <columns>Identidad__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>soraya</value>
    </filters>
    <label>Todos</label>
</ListView>